--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             desejar, mas já vamos avisando, não perdemos nenhum aluno, você
             continuará até ficar <span> GRANDE!</span><br /><br />
           </p><br/><br/><br/>
-          <img src="birl.png" alt="" width="300px" />
+          <img src="birl.png" alt="" width="300px" id="sobre" />
           <div class="botao">
             <a href="#matricular">Matricule-se agora</a>
           </div>
