--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <br /><br />
           <a href="#matricular">Matricule-se agora</a>
         </div>
-        <div class="description-second">
+        <div class="description-second" id="sobre">
           <h3>Unidades perto da sua localização</h3>
           <p>
             Procure agora a unidade mais próxima da sua residência e desfrute
@@ -64,7 +64,7 @@
             desejar, mas já vamos avisando, não perdemos nenhum aluno, você
             continuará até ficar <span> GRANDE!</span><br /><br />
           </p><br/><br/><br/>
-          <img src="birl.png" alt="" width="300px" id="sobre" />
+          <img src="birl.png" alt="" width="300px"  />
           <div class="botao">
             <a href="#matricular">Matricule-se agora</a>
           </div>
